# VeistEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  prependLine.py
Editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.h  VeistEditor.h
Editor/Editor.dir/Debug/: Editor.exe.recipe
Editor/Editor.dir/Debug/Editor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Editor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Editor/Editor.dir/Release/: Editor.exe.recipe
Editor/Editor.dir/Release/Editor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Editor.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Editor/VeistEditor/: EditorApp.cpp  EditorApp.h
Editor/VeistEditor/EditorGraphics/: EditorRenderer.cpp  EditorRenderer.h
Editor/VeistEditor/Panels/: EngineViewportPanel.cpp  EngineViewportPanel.h  EntityPropertiesPanel.cpp  EntityPropertiesPanel.h  GUIPanel.cpp  GUIPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  PanelManager.cpp  PanelManager.h  Panels.h  StatsPanel.cpp  StatsPanel.h
Engine/: CMakeLists.txt  Veist.h  main.cpp  pch.h
Engine/Veist/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Fustrum.cpp  Fustrum.h
Engine/Veist/Concurrency/: ThreadPool.cpp  ThreadPool.h
Engine/Veist/Core/: Application.cpp  Application.h  EntryPoint.h  Timestep.h  Window.cpp  Window.h
Engine/Veist/Events/: EditorEvents.h  Event.cpp  Event.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
Engine/Veist/Graphics/: ForwardRenderer.cpp  ForwardRenderer.h  RenderModule.cpp  RenderModule.h  Renderer.cpp
Engine/Veist/Graphics/Vulkan/: RenderBackend.cpp  RenderBackend.h  VulkanGarbageCollector.cpp  VulkanGarbageCollector.h
Engine/Veist/ImGUI/: GUIModule.cpp  GUIModule.h
Engine/Veist/Input/: InputModule.cpp  InputModule.h  KeyCodes.h
Engine/Veist/Material/: Material.cpp  Material.h  MaterialData.cpp  MaterialData.h  MaterialType.cpp  MaterialType.h  PBRMaterial.cpp  PBRMaterial.h  SkyboxMaterial.cpp  SkyboxMaterial.h
Engine/Veist/Mesh/: Mesh.cpp  Mesh.h
Engine/Veist/RenderGraph/: DescriptorTemplate.h  PassBuilder.cpp  PassBuilder.h  RenderGraph.cpp  RenderGraph.h  RenderGraphDescriptorTemplate.h  RenderGraphPass.cpp  RenderGraphPass.h  RenderGraphPassBuilder.cpp  RenderGraphPassBuilder.h  RenderGraphResource.cpp  RenderGraphResource.h  RenderGraphResourcePool.cpp  RenderGraphResourcePool.h  RendererUniforms.h  Resource.cpp  Resource.h  ResourcePool.cpp  ResourcePool.h
Engine/Veist/Renderer/: BasicRenderer.cpp  BasicRenderer.h  DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  RenderModule.cpp  RenderModule.h  Renderer.cpp  Renderer.h  WireframeRenderer.cpp  WireframeRenderer.h
Engine/Veist/Renderer/Vulkan/: RenderBackend.cpp  RenderBackend.h
Engine/Veist/Resources/: EngineResources.cpp  EngineResources.h
Engine/Veist/Scenes/: LightProbe.cpp  LightProbe.h  Model.cpp  Model.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h
Engine/Veist/Scenes/ECS/: ComponentPool.cpp  ComponentPool.h  ECSTypes.h  EntityRegistry.cpp  EntityRegistry.h  View.cpp  View.h
Engine/Veist/Util/: AssetLoader.cpp  AssetLoader.h  HashUtils.h  Logger.h
Engine/VeistEngine.dir/Debug/: VeistEngine.vcxproj.FileListAbsolute.txt
Engine/VeistEngine.dir/Debug/VeistEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  (+5 more)
src/: CMakeLists.txt  Logger.h  RenderBackend_VK.cpp  RenderBackend_VK.h  VK_RenderBackend.cpp  VK_RenderBackend.h  main.cpp  pch.h
src/Engine/: Logger.h  VkCheck.h  main.cpp
src/Engine/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Fustrum.cpp  Fustrum.h
src/Engine/Core/: Timestep.h
src/Engine/ImGUI/: GUIModule.cpp  GUIModule.h  ImGUIContext.cpp  ImGUIContext.h
src/Engine/Input/: InputModule.cpp  InputModule.h
src/Engine/Material/: Material.cpp  Material.h  PBRMaterial.cpp  PBRMaterial.h  SkyboxMaterial.cpp  SkyboxMaterial.h
src/Engine/Mesh/: Mesh.cpp  Mesh.h
src/Engine/Renderer/: ForwardRenderer.cpp  ForwardRenderer.h  RenderBackend.cpp  RenderBackend.h  RenderModule.cpp  RenderModule.h  Renderer.h
src/Engine/Scenes/: ComponentPool.cpp  ComponentPool.h  DirectionalLight.h  EntityRegistry.h  LightProbe.cpp  LightProbe.h  Model.cpp  Model.h  PointLight.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h
src/Engine/Util/: AssetLoader.cpp  AssetLoader.h
src/Platform/Vulkan/: RenderBackend_Vulkan.cpp  RenderBackend_Vulkan.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImGUIContext.cpp  VulkanImGUIContext.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderBackend.cpp  VulkanRenderBackend.h  VulkanShader.h  triangle.vert.spv  vkinitializers.h
src/Renderer/: Buffer.cpp  Buffer.h  ForwardRenderer.cpp  ForwardRenderer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Mesh.cpp  Mesh.h  RenderBackend.cpp  RenderBackend.h  RenderModule.cpp  RenderModule.h  Renderer.h
src/Shaders/: CubemapToSHLUT.comp  IBLEnvironmentMap.comp  IBLIrradianceMap.comp  IrradianceMap.comp  IrradianceMapDEBUG.comp  PBRforward.frag  PBRforward.frag.spv  PBRforward.vert.spv  Skybox.frag  Skybox.frag.spv  Skybox.vert  Skybox.vert.spv  SpecularEnvironmentMap.comp  descriptortest.frag  descriptortest.frag.spv  descriptortest.vert  descriptortest.vert.spv  equirectToCubemapHDR.comp  equirect_to_cubemap.comp  helmet.frag  helmet.frag.spv  helmet.vert  helmet.vert.spv  mainShader.frag  mainShader.frag.spv  mainShader.vert  mainShader.vert.spv  normalOnly.frag  normalOnly.frag.spv  normalOnly.vert  normalOnly.vert.spv  triangle.vert  triangle.vert.spv
src/Shaders/CachedSpirV/: IBLEnvironmentMap.comp.spv  IrradianceMap.comp.spv  PBRforward.frag.spv  Skybox.frag.spv  Skybox.vert.spv  equirectToCubemapHDR.comp.spv  equirect_to_cubemap.comp.spv
src/Shaders/utils/: CT_brdf.glsl  IBL_utils.glsl  brdf.glsl
src/Util/: AssetLoader.cpp  AssetLoader.h
src/VulkanEngine.dir/Debug/: VulkanEngine.exe.recipe
(+246 files in other folders)
